--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<div id="surveyContainer"></div>
 		<div id="eligibilityResultsContainer"></div>
 
+		<!-- TODO: Use production versions of scripts! -->
 		<script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
 		<script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
 		<script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
